menu avec les bon boutons problème du clique qui dure torp longtemp